Added Various Website Projects

--- a/index.html
+++ b/index.html
@@ -2,105 +2,80 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
-        integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+    integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
 
-    <link rel="stylesheet" href="style.css">
-    <title>Full bg scroll on click</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Full bg scroll on click</title>
 </head>
 
 <body>
-    <section id="page-1">
-        <a class="slide" href="#page-2">
-            <div class="content">
-                <h3>Hello there</h3>
-                <h4>We've been expecting you</h4>
-                <h1>We hope you read & enjoy</h1>
-                <h2>our small selection</h2>
-                <h2>of funny stories</h2>
-                <h4>Take a break and allow yourself to be entertained</h4>
-                <p>click anywhere on this page to continue</p>
-            </div>
-        </a>
-    </section>
-    <section id="page-2">
-        <a class="slide" href="#page-3">
-            <h3>So Today</h3>
-            <div class="content">
-                <div class="text">
-                    <h4>at the bank</h4>
-                    <h2>an old lady</h2>
-                    <h1>asked me to help check</h1>
-                    <h2>her balance</h2>
-                    <h4>So I pushed her over</h4>
-                </div>
-            </div>
-            <i class="fas fa-comment-alt"></i>
-            <p>Wanna read another? Go on, click me.</p>
-        </a>
-    </section>
-    <section id="page-3">
-        <a class="slide" href="#page-4">
-            <div class="content">
-                <h4>I bought some shoes from a drug dealer</h4>
-                <h2>I don't know what he laced them with</h2>
-                <h4>but I've been tripping all day</h4>
-            </div>
-            <i class="fas fa-chalkboard"></i>
-            <p>click anywhere on this page to continue</p>
-        </a>
-    </section>
-    <section id="page-4">
-        <a class="slide" href="#page-5">
-            <div class="content">
-                <h3>Say Whaaat!!</h3>
-                <h4>I told my girlfriend</h4>
-                <h1>she drew her eyebrows too high</h1>
-                <h4> She seemed surprised</h4>
-                <p>click anywhere on this page to continue</p>
-            </div>
-        </a>
-    </section>
-    <section id="page-5">
-        <a class="slide" href="#page-6">
-            <div class="content">
-                <h3>My dog used to</h3>
-                <h4>chase people on a bike a lot</h4>
-                <h1>It got so bad, finally</h1>
-                <h4>I had to take his bike away</h4>
-                <p>click anywhere on this page to continue</p>
-            </div>
-        </a>
-    </section>
-    <section id="page-6">
-        <a class="slide" href="#page-7">
-            <div class="content">
-                <h3>The last one...</h3>
-                <h4>Why do blind people hate</h4>
-                <h1>skydiving?</h1>
-                <h1>It scares</h1>
-                <h4>the hell out of their dogs</h4>
-            </div>
-        </a>
-    </section>
-    <section id="page-7">
-        <a class="slide" href="#page-1">
-            <div class="content">
-                <h3>And finally...</h3>
-                <h4>if you've made it this far</h4>
-                <h2>Well done and</h2>
-                <h1>thank you</h1>
-                <h2>for reading</h2>
-                <h4>I hope I've brightened</h4>
-                <h4>up your day</h4>
-                <h3>Bye now</h3>
-                <p>click here to go back to the top</p>
-            </div>
-        </a>
-    </section>
+  <!-- Trigger the Modal -->
+  <section id="page-1">
 
+    <div class="content" id="myModalTrigger">
+      <h3>Wayne's World</h3>
+      <h2>Web Design Portfolio</h2>
+      <p>Click here to view our work</p>
+    </div>
+
+
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+      <!-- The Close Button -->
+      <span class="close">&times;<p style="margin: 0;">close</p></span>
+
+      <!-- Modal Content (The Image) -->
+      <div class="modal-content" id="modal01">
+        <ol>
+          <li><a href="https://portfolioprime.github.io/wedding/">Stunning Wedding Website</a></li>
+          <li><a href="https://orphanlove81.github.io/">ESL Teaching in China Website</a></li>
+          <li><a href="https://portfolioprime.github.io/restaurant/">Fling Bay Restaurant Website</a></li>
+          <li><a href="https://portfolioprime.github.io/photo-portfolio/">Ace Photography Portfolio</a></li>
+          <li><a href="https://portfolioprime.github.io/fitness/">Personal Trainer Website</a></li>
+          <li><a href="https://portfolioprime.github.io/running-shoe-shop/">Running Shoe Online Store</a></li>
+          <li><a href="https://kaizenkungfu.co.za">Kaizen Kungfu Training</a></li>
+          <li><a href="https://portfolioprime.github.io/stars/">Stars Video Landing Page</a></li>
+          <li><a href="https://portfolioprime.github.io/slider/">Coffee Full Page Image Slider</a></li>
+          <li><a href="https://portfolioprime.github.io/jokes/">Jokes One Page Scroll Site</a></li>
+          <li><a href="https://i-love-you-marvel-avenger-3000.github.io/">Marvel Fan Page</a></li>
+
+        </ol>
+      </div>
+
+      <!-- Modal Caption (Image Text) -->
+      <!-- <div id="caption">
+        </div> -->
+    </div>
+
+  </section>
+
+  <script>
+    // Get the modal
+    var modal = document.getElementById("myModal");
+
+    // Get the image and insert it inside the modal - use its "alt" text as a caption
+    var img = document.getElementById("myModalTrigger");
+    var modalImg = document.getElementById("modal01");
+    var captionText = document.getElementById("caption");
+    img.onclick = function () {
+      modal.style.display = "block";
+      modalImg.src = this.src;
+      captionText.innerHTML = this.alt;
+    }
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function () {
+      modal.style.display = "none";
+    } 
+  </script>
 </body>
 
 </html>
