--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
           <li><a href="https://portfolioprime.github.io/restaurant/">Fling Bay Restaurant Website</a></li>
           <li><a href="https://portfolioprime.github.io/photo-portfolio/">Ace Photography Portfolio</a></li>
           <li><a href="https://portfolioprime.github.io/fitness/">Personal Trainer Website</a></li>
-          <li><a href="https://portfolioprime.github.io/running-shoe-shop/">Running Shoe Online Store</a></li>
           <li><a href="https://kaizenkungfu.co.za">Kaizen Kungfu Training</a></li>
+          <li><a href="https://portfolioprime.github.io/Music/">Musical Training Workshop</a></li>
+          <li><a href="https://portfolioprime.github.io/running-shoe-shop/">Running Shoe Online Store</a></li>
           <li><a href="https://portfolioprime.github.io/stars/">Stars Video Landing Page</a></li>
           <li><a href="https://portfolioprime.github.io/slider/">Coffee Full Page Image Slider</a></li>
           <li><a href="https://portfolioprime.github.io/jokes/">Jokes One Page Scroll Site</a></li>
