--- a/index.html
+++ b/index.html
@@ -32,18 +32,21 @@
       <!-- Modal Content (The Image) -->
       <div class="modal-content" id="modal01">
         <ol>
-          <li><a href="https://portfolioprime.github.io/wedding/">Stunning Wedding Website</a></li>
+          <li><a href="https://portfolioprime.github.io/rosa/">Classy Animated Restaurant Page</a></li>
           <li><a href="https://orphanlove81.github.io/">ESL Teaching in China Website</a></li>
-          <li><a href="https://portfolioprime.github.io/restaurant/">Fling Bay Restaurant Website</a></li>
+          <li><a href="https://portfolioprime.github.io/wedding/">Stunning Wedding Website</a></li>
+          <li><a href="https://kaizenkungfu.co.za">Kaizen Kungfu Training</a></li>
+          <li><a href="https://portfolioprime.github.io/dogs/">Man's best friend -
+              Adopt a puppy website</a></li>
+          <li><a href="https://i-love-you-marvel-avenger-3000.github.io/">Marvel Fan Page</a></li>
+          <li><a href="https://portfolioprime.github.io/music/">Music Training Workshop Page</a></li>
           <li><a href="https://portfolioprime.github.io/photo-portfolio/">Ace Photography Portfolio</a></li>
           <li><a href="https://portfolioprime.github.io/fitness/">Personal Trainer Website</a></li>
-          <li><a href="https://kaizenkungfu.co.za">Kaizen Kungfu Training</a></li>
-          <li><a href="https://portfolioprime.github.io/music/">Musical Training Workshop</a></li>
+          <li><a href="https://portfolioprime.github.io/jokes/">Jokes One Page Scroll Site</a></li>
+          <li><a href="https://portfolioprime.github.io/restaurant/">Another Restaurant Website</a></li>
           <li><a href="https://portfolioprime.github.io/running-shoe-shop/">Running Shoe Online Store</a></li>
           <li><a href="https://portfolioprime.github.io/stars/">Stars Video Landing Page</a></li>
           <li><a href="https://portfolioprime.github.io/slider/">Coffee Full Page Image Slider</a></li>
-          <li><a href="https://portfolioprime.github.io/jokes/">Jokes One Page Scroll Site</a></li>
-          <li><a href="https://i-love-you-marvel-avenger-3000.github.io/">Marvel Fan Page</a></li>
 
         </ol>
       </div>
