Fixed Running Shoe Shop
Fixed font-size, container width and padding issues. Removed unfinished design elements.

--- a/running-shoe-shop/index.html
+++ b/running-shoe-shop/index.html
@@ -184,7 +184,7 @@
     </div>
   </section>
 
-  <section id="new">
+  <!-- <section id="new">
     <ul class="grid cs-style-1">
       <li>
         <figure>
@@ -207,10 +207,10 @@
         </figure>
       </li>
     </ul>
-  </section>
+  </section> -->
 
 
-  <section id="contact">
+  <!-- <section id="contact">
     <div class="wrapper-flex">
       <div class="contact-left">
         <h1>Contact Us</h1>
@@ -225,7 +225,7 @@
 
       <div class="dark-circle-bg-shape"></div>
     </div>
-  </section>
+  </section> -->
 
 </body>
 
