--- a/robotics/index.html
+++ b/robotics/index.html
@@ -23,17 +23,17 @@
           <li class="nav-item">
             <a href="#" class="nav-link">Home</a></li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Robots</a></li>
+            <a href="#robots" class="nav-link">Robots</a></li>
           <li class="nav-item">
-            <a href="" class="nav-link">Projects</a></li>
+            <a href="#projects" class="nav-link">Projects</a></li>
           <li class="nav-item">
-            <a href="" class="nav-link">Research</a></li>
+            <a href="#research" class="nav-link">Research</a></li>
           <li class="nav-item">
-            <a href="" class="nav-link">Explore</a></li>
+            <a href="#explore" class="nav-link">Explore</a></li>
           <li class="nav-item">
-            <a href="" class="nav-link">Prosthetics</a></li>
+            <a href="#prosthetics" class="nav-link">Prosthetics</a></li>
           <li class="nav-item">
-            <a href="" class="nav-link">Contact</a></li>
+            <a href="#contact" class="nav-link">Contact</a></li>
         </ul>
         <!-- Menu-toggle -->
         <div class="menu-toggle">
@@ -62,13 +62,13 @@
         <div class="line line-right"></div>
       </div>
       <!-- <h4>of</h4> -->
-      <h5 class="sub-headline">Artificially Intelligence</h5>
+      <h5 class="sub-headline">Artificial Intelligence</h5>
       <a href="#" class="btn btn-showcase">Explore</a>
     </div>
   </section>
   <!-- END SHOWCASE -->
 
-  <section id="apps">
+  <section id="robots">
     <div class="container">
       <div class="row">
         <!-- col text -->
@@ -155,7 +155,7 @@
   </section>
   <!-- END PROJECTS -->
 
-  <section id="more">
+  <section id="prosthetics">
     <div class="container">
       <div class="row">
         <!-- col text -->
