--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           <li><a href="https://portfolioprime.github.io/purple-flat/">Purple flat design landing page</a></li>
           <li><a href="https://portfolioprime.github.io/wedding/">Stunning Wedding Website</a></li>
           <li><a href="https://kaizenkungfu.co.za">Kaizen Kungfu Training</a></li>
+          <li><a href="https://portfolioprime.github.io/robotics/">Artificial Intelligence Robotics Site</a></li>
           <li><a href="https://portfolioprime.github.io/dogs/">Man's best friend - Adopt a puppy website</a></li>
           <li><a href="https://i-love-you-marvel-avenger-3000.github.io/">Marvel Fan Page</a></li>
           <li><a href="https://portfolioprime.github.io/music/">Music Training Workshop Page</a></li>
