--- a/robotics/index.html
+++ b/robotics/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
     integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
   <title>A.I. of the future</title>
 </head>
@@ -17,12 +17,12 @@
       <nav class="nav">
         <!-- Logo -->
         <a href="index.html" class="logo">
-          <i class="fas fa-rocket"></i>
+          <i class="fas fa-robot"></i>
         </a>
         <!-- Nav Menu -->
         <ul class="nav-list">
           <li class="nav-item">
-            <a href="#" class="nav-link">Home</a></li>
+            <a href="#showcase" class="nav-link">Home</a></li>
           <li class="nav-item">
             <a href="#robots" class="nav-link">Robots</a></li>
           <li class="nav-item">
@@ -69,119 +69,141 @@
   </section>
   <!-- END SHOWCASE -->
 
-  <section id="robots">
-    <div class="container">
-      <div class="row">
-        <!-- col text -->
-        <div class="col-text padding-right">
-          <div class="global-headline">
-            <h2 class="sup-headline headline-color">
-              <span class="first-letter">A.I.</span>
-            </h2>
-            <h1 class="headline headline-dark">Robots</h1>
-            <div class="asterisk">
-              <i class="fas fa-asterisk"></i>
+  <section id="robots" class="offset">
+
+    <div class="section">
+      <div class="container">
+        <div class="row">
+          <!-- col text -->
+          <div class="col-text padding-right">
+            <div class="global-headline">
+              <h2 class="sup-headline headline-color">
+                <span class="first-letter">A.I.</span>
+              </h2>
+              <h1 class="headline headline-dark">Robots</h1>
+              <div class="asterisk">
+                <i class="fas fa-asterisk"></i>
+              </div>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit eius nulla, accusantium placeat et quia
+                velit ut, commodi possimus voluptatum debitis maxime facere, eos nisi temporibus rerum quam dolorum
+                porro?
+              </p>
+              <a href="#" class="btn btn-body">Read More</a>
             </div>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit eius nulla, accusantium placeat et quia
-              velit ut, commodi possimus voluptatum debitis maxime facere, eos nisi temporibus rerum quam dolorum porro?
-            </p>
-            <a href="#" class="btn btn-body">Read More</a>
           </div>
-        </div>
-        <!-- col img -->
-        <div class="col-img">
-          <img src="images/wall-e-toy-on-beige-pad-2103864.jpg" alt="">
+          <!-- col img -->
+          <div class="col-img">
+            <img src="images/wall-e-toy-on-beige-pad-2103864.jpg" alt="">
+          </div>
         </div>
       </div>
     </div>
+
   </section>
   <!-- END ABOUT -->
 
-  <section id="projects" class="between">
-    <div class="container">
-      <div class="global-headline">
-        <h2 class="sup-headline">
-          <span class="first-letter">R</span>obotics
-        </h2>
-        <h1 class="headline">Projects</h1>
-        <br>
-        <a href="#" class="btn btn-body">Read More</a>
+  <section id="projects" class="offset">
+
+    <div class="section projects between">
+      <div class="container">
+        <div class="global-headline">
+          <h2 class="sup-headline">
+            <span class="first-letter">R</span>obotics
+          </h2>
+          <h1 class="headline">Projects</h1>
+          <br>
+          <a href="#" class="btn btn-body">Read More</a>
+        </div>
       </div>
     </div>
+
   </section>
   <!-- END PROJECTS -->
 
-  <section id="research">
-    <div class="container">
-      <div class="row">
-        <!-- col img group -->
-        <div class="col-img-group padding-right">
-          <img src="images/book-coffee-computer-desk-430546.jpg" alt="">
-          <img src="images/blue-and-yellow-phone-modules-1476321.jpg" alt="">
-          <img src="images/macro-shot-of-water-drops-on-leaf-326461.jpg" alt="">
-          <img src="images/abstract-art-blur-bright-373543.jpg" alt="">
-        </div>
-        <!-- col text -->
-        <div class="col-text">
-          <div class="global-headline">
-            <h2 class="sup-headline headline-color">
-              <span class="first-letter">T</span>echnological
-            </h2>
-            <h1 class="headline headline-dark">Research</h1>
-            <div class="asterisk">
-              <i class="fas fa-asterisk"></i>
+  <section id="research" class="offset">
+
+    <div class="section">
+      <div class="container">
+        <div class="row">
+          <!-- col img group -->
+          <div class="col-img-group padding-right">
+            <img src="images/book-coffee-computer-desk-430546.jpg" alt="">
+            <img src="images/blue-and-yellow-phone-modules-1476321.jpg" alt="">
+            <img src="images/macro-shot-of-water-drops-on-leaf-326461.jpg" alt="">
+            <img src="images/abstract-art-blur-bright-373543.jpg" alt="">
+          </div>
+          <!-- col text -->
+          <div class="col-text">
+            <div class="global-headline">
+              <h2 class="sup-headline headline-color">
+                <span class="first-letter">T</span>echnological
+              </h2>
+              <h1 class="headline headline-dark">Research</h1>
+              <div class="asterisk">
+                <i class="fas fa-asterisk"></i>
+              </div>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit eius nulla, accusantium placeat et quia
+                velit ut, commodi possimus voluptatum debitis maxime facere, eos nisi temporibus rerum quam dolorum
+                porro?
+              </p>
+              <a href="#" class="btn btn-body">Read More</a>
             </div>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit eius nulla, accusantium placeat et quia
-              velit ut, commodi possimus voluptatum debitis maxime facere, eos nisi temporibus rerum quam dolorum porro?
-            </p>
-            <a href="#" class="btn btn-body">Read More</a>
           </div>
         </div>
       </div>
     </div>
+
   </section>
   <!-- END RESEARCH -->
 
-  <section id="explore" class="between">
-    <div class="container">
-      <div class="global-headline">
-        <h2 class="sup-headline">
-          <span class="first-letter">E</span>xplore
-        </h2>
-        <h1 class="headline">A.I. Solutions</h1>
-        <br>
-        <a href="#" class="btn btn-body">Read More</a>
+  <section id="explore" class="offset">
+
+    <div class="section explore between">
+      <div class="container">
+        <div class="global-headline">
+          <h2 class="sup-headline">
+            <span class="first-letter">E</span>xplore
+          </h2>
+          <h1 class="headline">A.I. Solutions</h1>
+          <br>
+          <a href="#" class="btn btn-body">Read More</a>
+        </div>
       </div>
     </div>
+
   </section>
   <!-- END PROJECTS -->
 
-  <section id="prosthetics">
-    <div class="container">
-      <div class="row">
-        <!-- col text -->
-        <div class="col-text padding-right">
-          <div class="global-headline">
-            <h2 class="sup-headline headline-color">
-              <span class="first-letter">P</span>rosthetics
-            </h2>
-            <h1 class="headline headline-dark">of the future</h1>
-            <div class="asterisk">
-              <i class="fas fa-asterisk"></i>
+  <section id="prosthetics" class="offset">
+
+    <div class="section">
+      <div class="container">
+        <div class="row">
+          <!-- col text -->
+          <div class="col-text padding-right">
+            <div class="global-headline">
+              <h2 class="sup-headline headline-color">
+                <span class="first-letter">P</span>rosthetics
+              </h2>
+              <h1 class="headline headline-dark">of the future</h1>
+              <div class="asterisk">
+                <i class="fas fa-asterisk"></i>
+              </div>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit eius nulla, accusantium placeat et quia
+                velit ut, commodi possimus voluptatum debitis maxime facere, eos nisi temporibus rerum quam dolorum porro?
+              </p>
+              <a href="#" class="btn btn-body">Read More</a>
             </div>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit eius nulla, accusantium placeat et quia
-              velit ut, commodi possimus voluptatum debitis maxime facere, eos nisi temporibus rerum quam dolorum porro?
-            </p>
-            <a href="#" class="btn btn-body">Read More</a>
+          </div>
+          <!-- col img -->
+          <div class="col-img-group">
+            <img src="images/engineer-fitting-prosthetic-arm-3912992.jpg" alt="">
+            <img src="images/robotic-hand-prosthetic-3912979.jpg" alt="">
           </div>
         </div>
-        <!-- col img -->
-        <div class="col-img-group">
-          <img src="images/engineer-fitting-prosthetic-arm-3912992.jpg" alt="">
-          <img src="images/robotic-hand-prosthetic-3912979.jpg" alt="">
-        </div>
-      </div>
+      </div>  
     </div>
+
   </section>
   <!-- END RESEARCH -->
 
