--- a/robotics/index.html
+++ b/robotics/index.html
@@ -4,8 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- fa ICONS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
     integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA=" crossorigin="anonymous" />
+  <!-- PRELOAD -->
+  <link rel="preload" as="font" href="fonts/Orbitron.woff2" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" as="font" href="fonts/Russo-One.woff2" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" as="font" href="fonts/Open-Sans.woff2" type="font/woff2" crossorigin="anonymous">
+  <!-- STYLES -->
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
   <title>A.I. of the future</title>
@@ -190,7 +196,8 @@
                 <i class="fas fa-asterisk"></i>
               </div>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit eius nulla, accusantium placeat et quia
-                velit ut, commodi possimus voluptatum debitis maxime facere, eos nisi temporibus rerum quam dolorum porro?
+                velit ut, commodi possimus voluptatum debitis maxime facere, eos nisi temporibus rerum quam dolorum
+                porro?
               </p>
               <a href="#" class="btn btn-body">Read More</a>
             </div>
@@ -201,7 +208,7 @@
             <img src="images/robotic-hand-prosthetic-3912979.jpg" alt="">
           </div>
         </div>
-      </div>  
+      </div>
     </div>
 
   </section>
