--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- fa ICONS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
     integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
-
+  <!-- PRELOADS -->
+  <link rel="preload" as="font" href="fonts/Dancing-Script.woff2" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" as="font" href="fonts/Oswald400.woff2" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" as="font" href="fonts/Amatic-SC.woff2" type="font/woff2" crossorigin="anonymous">
+  <!-- STYLES -->
   <link rel="stylesheet" href="style.css">
   <title>Full bg scroll on click</title>
 </head>
@@ -14,7 +19,7 @@
 <body>
   <!-- Trigger the Modal -->
   <section id="page-1">
-    
+
     <div class="content" id="myModalTrigger">
       <h3>Wayne's World</h3>
       <h2>Web Design Portfolio</h2>
