--- a/wedding/index.html
+++ b/wedding/index.html
@@ -7,9 +7,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
     integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
 
-      <!-- PRELOAD FONTS -->
-  <link rel="preload" href="fonts/DancingScript-Bold.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+  <!-- PRELOAD FONTS -->
+  <link rel="preload" as="font" href="fonts/Dancing-Script.woff2"  type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" as="font" href="fonts/Cormorant-Garamond.woff2" type="font/woff2" crossorigin="anonymous">
 
+  <!-- STYLES -->
   <link rel="stylesheet" href="style.css">
   <title>Wedding Full bg Landing page</title>
 </head>
