--- a/jokes/index.html
+++ b/jokes/index.html
@@ -17,6 +17,19 @@
 </head>
 
 <body>
+  <div class="overlay"></div>
+
+  <!-- START Back to Portfolio Button -->
+  <div class="back-to-portfolio">
+    <h4><a href="https://portfolioprime.github.io"><i class="fas fa-long-arrow-alt-left fa-2x"></i> Back to
+        portfolio</a></h4>
+    <h4 class="right"><a href="https://portfolioprime.github.io/restaurant/">To next website <i
+          class="fas fa-long-arrow-alt-right fa-2x"></i></a></h4>
+    <div class="after"><span><i class="fas fa-chevron-left"></i></span></div>
+  </div>
+  <!-- END Back to Portfolio Button -->
+
+
   <section id="page-1">
     <a class="slide" href="#page-2">
       <div class="content">
@@ -87,6 +100,7 @@
         <h1>skydiving?</h1>
         <h1>It scares</h1>
         <h4>the hell out of their dogs</h4>
+        <p>click anywhere on this page to continue</p>
       </div>
     </a>
   </section>
@@ -106,6 +120,8 @@
     </a>
   </section>
 
+  <!-- JS -->
+  <script src="main.js"></script>
 </body>
 
 </html>
