--- a/rosa/index.html
+++ b/rosa/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Rosa | Classy Animated Restaurant</title>
 
   <!-- PRELOAD FONTS -->
   <!-- <link rel="preload" href="fonts/lanenar_Lane.woff" as="font" type="font/woff" crossorigin="anonymous"> -->
-  
+
   <!-- FONT AWESOME CDN -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css"
     integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA=" crossorigin="anonymous" />
@@ -78,17 +78,21 @@
       </div>
     </div>
 
-    <!-- BAK TO PORTFOLIO BUTTON -->
+    <!-- BACK TO PORTFOLIO BUTTON -->
     <div class="back-to-portfolio">
       <h4>
         <a href="https://portfolioprime.github.io">
-        <i class="fas fa-long-arrow-alt-left fa-2x"></i> Back to portfolio</a>
+          <i class="fas fa-long-arrow-alt-left fa-2x"></i> Back to portfolio</a>
       </h4>
       <h4 class="right">
         <a href="https://orphanlove81.github.io/">To next website <i class="fas fa-long-arrow-alt-right fa-2x"></i></a>
       </h4>
-      <div class="after"><span><i class="fas fa-chevron-left"></i></span></div>
-  </div>
+      <div class="after">
+        <span><i class="fas fa-chevron-left"></i></span>
+      </div>
+    </div>
+    <!-- BACK TO PORTFOLIO OVERLAY -->
+    <div class="overlay"></div>
 
   </section>
   <!-- End Hero Section -->
