--- a/robotics/index.html
+++ b/robotics/index.html
@@ -75,7 +75,7 @@
 
     <div class="back-to-portfolio">
         <h4><a href="https://portfolioprime.github.io"><i class="fas fa-long-arrow-alt-left fa-2x"></i> Back to portfolio</a></h4>
-        <h4 class="right"><a href="https://portfolioprime.github.io/dogs/">To next website <i class="fas fa-long-arrow-alt-right fa-2x"></i></a></h4>
+        <h4 class="right"><a href="https://portfolioprime.github.io/wedding/">To next website <i class="fas fa-long-arrow-alt-right fa-2x"></i></a></h4>
         <div class="after"><span><i class="fas fa-chevron-left"></i></span></div>
     </div>
 
