--- a/dogs/index.html
+++ b/dogs/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- FONT AWESOME ICONS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
-  integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
+    integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
   <!-- LOCAL ICONS -->
   <link rel="stylesheet" href="font-awesome.css">
   <!-- CSS -->
@@ -65,6 +65,26 @@
     </div>
   </section>
 
+  <!-- START Back to Portfolio Button -->
+  <div class="back-to-portfolio">
+    <h4>
+      <a href="https://portfolioprime.github.io"><i class="fas fa-long-arrow-alt-left fa-2x"></i> Back to
+        portfolio</a>
+    </h4>
+    <h4 class="right">
+      <a href="https://i-love-you-marvel-avenger-3000.github.io/">To next website <i
+          class="fas fa-long-arrow-alt-right fa-2x"></i></a>
+    </h4>
+    <div class="after">
+      <span>
+        <i class="fas fa-chevron-left"></i>
+      </span>
+    </div>
+  </div>
+  <div class="overlay"></div>
+  <!-- END Back to Portfolio Button -->
+
+
   <!-- ABOUT 2 COL INTRO -->
   <section id="about">
     <h1>About</h1>
@@ -105,7 +125,7 @@
 
       <div class="col-img">
         <div class="img-item">
-          <img src="images/dogs-tall3.jpg" alt="">
+          <img class="img-border" src="images/dogs-tall3.jpg" alt="">
         </div>
       </div>
     </div>
