--- a/dogs/index.html
+++ b/dogs/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="font-awesome.css">
   <!-- CSS -->
   <link rel="stylesheet" href="style.css">
-  <title>New Dog Site</title>
+  <title>Man's Best Friend</title>
 </head>
 
 <body>
