--- a/dogs/index.html
+++ b/dogs/index.html
@@ -72,7 +72,7 @@
         portfolio</a>
     </h4>
     <h4 class="right">
-      <a href="https://i-love-you-marvel-avenger-3000.github.io/">To next website <i
+      <a href="https://portfolioprime.github.io/music/">To next website <i
           class="fas fa-long-arrow-alt-right fa-2x"></i></a>
     </h4>
     <div class="after">
