--- a/music/index.html
+++ b/music/index.html
@@ -65,6 +65,27 @@
             ea repellat modi est sequi deserunt adipisci velit, alias quis non? Minus labore similique eum quia.</p>
     </section>
 
+
+    <!-- START Back to Portfolio Button -->
+    <div class="back-to-portfolio">
+        <h4>
+            <a href="https://portfolioprime.github.io"><i class="fas fa-long-arrow-alt-left fa-2x"></i> Back to
+                portfolio</a>
+        </h4>
+        <h4 class="right">
+            <a href="https://portfolioprime.github.io/photo-portfolio/">To next website <i
+                    class="fas fa-long-arrow-alt-right fa-2x"></i></a>
+        </h4>
+        <div class="after">
+            <span>
+                <i class="fas fa-chevron-left"></i>
+            </span>
+        </div>
+    </div>
+    <div class="overlay"></div>
+    <!-- END Back to Portfolio Button -->
+
+
     <section id="services">
         <div class="about-3-col">
             <div class="row">
@@ -194,6 +215,7 @@
         } 
     </script>
 
+<script src="main.js"></script>
 </body>
 
 </html>
