--- a/photo-portfolio/index.html
+++ b/photo-portfolio/index.html
@@ -31,7 +31,7 @@
                     portfolio</a>
             </h4>
             <h4 class="right">
-                <a href="https://portfolioprime.github.io/photo-portfolio/">To next website <i
+                <a href="https://portfolioprime.github.io/fitness/">To next website <i
                         class="fas fa-long-arrow-alt-right fa-2x"></i></a>
             </h4>
             <div class="after">
