--- a/web-design/index.html
+++ b/web-design/index.html
@@ -11,17 +11,19 @@
   <!-- flipster gallery -->
   <link rel="stylesheet" href="dist/jquery.flipster.min.css">
   <!-- JS -->
-  <script src="jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+  <!-- <script src="jquery.min.js"></script> -->
   <script src="dist/jquery.flipster.min.js"></script>
-  <script src="dist/color-switcher.js"></script>
+
   <script src="dist/scrollreveal.min.js"></script>
 
   <!-- My CSS Styles -->
-  <link rel="stylesheet" href="css/white.css">
+  <!-- <link rel="stylesheet" href="css/white.css">
   <link rel="stylesheet" href="css/teal.css">
   <link rel="stylesheet" href="css/blue.css">
   <link rel="stylesheet" href="css/pink.css">
-  <link rel="stylesheet" href="css/purple.css">
+  <link rel="stylesheet" href="css/purple.css"> -->
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -35,7 +37,6 @@
     <div class="logo load-hidden" id="logo">
       <a href="#top">
         WH
-        <!-- <img src="images/logo-pink-thicker.png" alt=""> -->
       </a>
     </div>
     <div class="menu-right">
@@ -71,8 +72,8 @@
     <!-- <img src="images/bg.jpg" id="bg" alt=""> -->
     <img src="images/bg-pink-stars.png" id="bg" alt="">
     <img src="images/sun-no-blur-2049px.svg" id="sun" alt="">
-    <img src="images/mountains-right-2049px.svg" id="mountain-right" alt="">
-    <img src="images/mountains-left-2049px.svg" id="mountain-left" alt="">
+    <!-- <img src="images/mountains-right-2049px.svg" id="mountain-right" alt=""> -->
+    <!-- <img src="images/mountains-left-2049px.svg" id="mountain-left" alt=""> -->
     <img src="images/wayne-sm.png" id="wayne" alt="">
 
 
@@ -203,7 +204,8 @@
                 <source srcset="images/gallery-img/w350/ai-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/ai-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/ai-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/ai-wide-746x520.png" data-src="images/gallery-img/ai-wide-746x520.png">
+                <img src="images/gallery-img/ai-wide-746x520.png"
+                  data-src="images/gallery-img/ai-wide-746x520.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/robotics/">
@@ -230,7 +232,8 @@
                 <source srcset="images/gallery-img/w350/fitness-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/fitness-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/fitness-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/fitness-wide.png" data-src="images/gallery-img/fitness-wide.png">
+                <img src="images/gallery-img/fitness-wide.png"
+                  data-src="images/gallery-img/fitness-wide.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/fitness/">
@@ -243,7 +246,8 @@
                 <source srcset="images/gallery-img/w350/kungfu-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/kungfu-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/kungfu-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/fitness-wide.png" data-src="images/gallery-img/fitness-wide.png">
+                <img src="images/gallery-img/kungfu-wide.png"
+                  data-src="images/gallery-img/kungfu-wide.png">
               </picture>
               <div class="content">
                 <a href="https://kaizenkungfu.co.za/">
@@ -256,7 +260,8 @@
                 <source srcset="images/gallery-img/w350/panda-2-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/panda-2-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/panda-2-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/fitness-wide.png" data-src="images/gallery-img/fitness-wide.png">
+                <img src="images/gallery-img/panda-wide-746x5202.png"
+                  data-src="images/gallery-img/panda-wide-746x5202.png">
               </picture>
               <div class="content">
                 <a href="https://orphanlove81.github.io/">
@@ -269,7 +274,8 @@
                 <source srcset="images/gallery-img/w350/rosa-wide-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/rosa-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/rosa-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/rosa-wide-746x520.png" data-src="images/gallery-img/rosa-wide-746x520.png">
+                <img src="images/gallery-img/rosa-wide-746x520.png"
+                  data-src="images/gallery-img/rosa-wide-746x520.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/rosa/">
@@ -283,7 +289,8 @@
                 <source srcset="images/gallery-img/w500/music-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/music-500.png" media="(max-height: 700px)">
                 <source srcset="images/gallery-img/text7.gif" media="(max-height: 450px)">
-                <img src="images/gallery-img/music-wide.png" data-src="images/gallery-img/music-wide.png">
+                <img src="images/gallery-img/music-wide.png"
+                  data-src="images/gallery-img/music-wide.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/music/">
@@ -296,7 +303,8 @@
                 <source srcset="images/gallery-img/w350/marvel-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/marvel-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/marvel-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/marvel-wide.png" data-src="images/gallery-img/marvel-wide.png">
+                <img src="images/gallery-img/marvel-wide.png"
+                  data-src="images/gallery-img/marvel-wide.png">
               </picture>
               <div class="content">
                 <a href="https://i-love-you-marvel-avenger-3000.github.io/">
@@ -309,7 +317,8 @@
                 <source srcset="images/gallery-img/w350/photo-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/photo-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/photo-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/photo-wide.png" data-src="images/gallery-img/photo-wide.png">
+                <img src="images/gallery-img/photo-wide.png"
+                  data-src="images/gallery-img/photo-wide.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/photo-portfolio/">
@@ -322,7 +331,8 @@
                 <source srcset="images/gallery-img/w350/restaurant-350.png" media="(max-height: 450px)">
                 <source srcset="images/gallery-img/w500/restaurant-500.png" media="(max-width: 991px)">
                 <source srcset="images/gallery-img/w500/restaurant-500.png" media="(max-height: 700px)">
-                <img src="images/gallery-img/restaurant-wide.png" data-src="images/gallery-img/restaurant-wide.png">
+                <img src="images/gallery-img/restaurant-wide.png"
+                  data-src="images/gallery-img/restaurant-wide.png">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/restaurant/">
@@ -422,9 +432,14 @@
   <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
   <!-- SCRIPTS -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="dist/color-switcher.js"></script>
 
   <script>
+
+    // Passive Event listener Example
+    // document.addEventListener('touchstart', onTouchStart, { passive: true });
+
+
     //////////////////////////////////////////////
     //HERO SCROLL Animations
     //////////////////////////////////////////////
