--- a/web-design/index.html
+++ b/web-design/index.html
@@ -10,10 +10,10 @@
   <link rel="stylesheet" href="dist/color-switcher.css">
   <!-- flipster gallery -->
   <link rel="stylesheet" href="dist/jquery.flipster.min.css">
+  
   <!-- JS -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-  <!-- <script src="jquery.min.js"></script> -->
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+  <script src="jquery.min.js"></script>
   <script src="dist/jquery.flipster.min.js"></script>
 
   <script src="dist/scrollreveal.min.js"></script>
